// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteRuleModal renders as delete button after opening and closing modal 1`] = `
<React.Fragment>
  <EuiLink
    color="danger"
    onClick={[Function]}
    type="button"
  >
    <FormattedMessage
      defaultMessage="Delete rule"
      id="xpack.ml.ruleEditor.deleteRuleModal.deleteRuleLinkText"
      values={Object {}}
    />
  </EuiLink>
</React.Fragment>
`;

exports[`DeleteRuleModal renders as delete button when not visible 1`] = `
<React.Fragment>
  <EuiLink
    color="danger"
    onClick={[Function]}
    type="button"
  >
    <FormattedMessage
      defaultMessage="Delete rule"
      id="xpack.ml.ruleEditor.deleteRuleModal.deleteRuleLinkText"
      values={Object {}}
    />
  </EuiLink>
</React.Fragment>
`;

exports[`DeleteRuleModal renders modal after clicking delete rule link 1`] = `
<React.Fragment>
  <EuiLink
    color="danger"
    onClick={[Function]}
    type="button"
  >
    <FormattedMessage
      defaultMessage="Delete rule"
      id="xpack.ml.ruleEditor.deleteRuleModal.deleteRuleLinkText"
      values={Object {}}
    />
  </EuiLink>
  <EuiOverlayMask>
    <EuiConfirmModal
      buttonColor="primary"
      cancelButtonText={
        <FormattedMessage
          defaultMessage="Cancel"
          id="xpack.ml.ruleEditor.deleteRuleModal.cancelButtonLabel"
          values={Object {}}
        />
      }
      confirmButtonText={
        <FormattedMessage
          defaultMessage="Delete"
          id="xpack.ml.ruleEditor.deleteRuleModal.deleteButtonLabel"
          values={Object {}}
        />
      }
      defaultFocusedButton="confirm"
      onCancel={[Function]}
      onConfirm={[Function]}
      title={
        <FormattedMessage
          defaultMessage="Delete rule"
          id="xpack.ml.ruleEditor.deleteRuleModal.deleteRuleTitle"
          values={Object {}}
        />
      }
    >
      <p>
        <FormattedMessage
          defaultMessage="Are you sure you want to delete this rule?"
          id="xpack.ml.ruleEditor.deleteRuleModal.deleteRuleDescription"
          values={Object {}}
        />
      </p>
    </EuiConfirmModal>
  </EuiOverlayMask>
</React.Fragment>
`;
